update travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,32 @@
-language: minimal
-services: docker
-env:
-  - DOCKER_COMPOSE_VERSION=1.23.2
-before_install:
-  - docker -v && docker-compose -v
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
-  - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
-  - chmod +x ./kubectl
-  - sudo mv ./kubectl /usr/local/bin/kubectl
+language: node_js
+node_js:
+  - 13
 
+services:
+  - docker
+
+# Pre-testing installs
 install:
-  - docker-compose -f udagram-deployment/docker-compose-build.yaml build --parallel
+  - echo "nothing needs to be installed"
+
+# Scripts to be run such as tests
+before_script:
+  - echo "no tests"
+
+script:
+  - docker build -t udagram-frontend ./udagram-frontend
+  - docker build -t udagram-backend-feed ./udagram-backend-feed
+  - docker build -t udagram-backend-user ./udagram-backend-user
+  - docker build -t reverseproxy ./udagram-reverseproxy
+  - docker tag udagram-frontend duyhoang5891/udagram-frontend
+  - docker tag udagram-backend-feed duyhoang5891/udagram-backend-feed
+  - docker tag udagram-backend-user duyhoang5891/udagram-backend-feed
+  - docker tag reverseproxy duyhoang5891/reverseproxy
+
+after_success:
+  - docker images
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker-compose -f udagram-deployment/docker-compose-build.yaml push
+  - docker push duyhoang5891/udagram-backend-feed
+  - docker push duyhoang5891/udagram-backend-user
+  - docker push duyhoang5891/udagram-frontend
+  - docker push duyhoang5891/reverseproxy
