Update travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,19 +14,17 @@ before_script:
   - echo "no tests"
 
 script:
-  - docker build -t udagram-frontend ./udagram-frontend
-  - docker build -t udagram-backend-feed ./udagram-backend-feed
-  - docker build -t udagram-backend-user ./udagram-backend-user
-  - docker build -t reverseproxy ./udagram-reverseproxy
-  - docker tag udagram-frontend duyhoang5891/udagram-frontend
-  - docker tag udagram-backend-feed duyhoang5891/udagram-backend-feed
-  - docker tag udagram-backend-user duyhoang5891/udagram-backend-feed
-  - docker tag reverseproxy duyhoang5891/reverseproxy
+  - docker --version # print the version for logging
+  - docker build -t $DOCKER_USERNAME/reverseproxy ./udagram-reverseproxy # build reverse proxy
+  - docker build -t $DOCKER_USERNAME/udagram-api-user ./udagram-backend-user        # build user api
+  - docker build -t $DOCKER_USERNAME/udagram-api-feed ./udagram-backend-feed         # build feed api
+  - docker build -t $DOCKER_USERNAME/udagram-frontend ./udagram-frontend         # build frontend
+  - docker images   # check build result
 
 after_success:
-  - docker images
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push duyhoang5891/udagram-backend-feed
-  - docker push duyhoang5891/udagram-backend-user
-  - docker push duyhoang5891/udagram-frontend
-  - docker push duyhoang5891/reverseproxy
+  - docker push $DOCKER_USERNAME/reverseproxy #push reverse proxy
+  - docker push $DOCKER_USERNAME/udagram-api-user     #push user api
+  - docker push $DOCKER_USERNAME/udagram-api-feed     #push feed api
+  - docker push $DOCKER_USERNAME/udagram-frontend     #push frontend
+  - docker logout # cleaup docker authentication
