--- a/udagram-deployment/docker-compose.yaml
+++ b/udagram-deployment/docker-compose.yaml
@@ -1,15 +1,15 @@
 version: "3"
 services:
-  reverse-proxy:
-      image: duyhoang5891/reverse-proxy
+  udagram-reverse-proxy:
+      image: duyhoang5891/udagram-reverse-proxy
       ports:
           - 8080:8080
       restart: always
       depends_on:
-        - udagram-backend-user
-        - udagram-backend-feed
-  udagram-backend-user:
-    image: duyhoang5891/udagram-backend-user
+        - udagram-api-user
+        - udagram-api-feed
+  udagram-api-user:
+    image: duyhoang5891/udagram-api-user
     environment:
       POSTGRES_USERNAME: $POSTGRES_USERNAME
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
@@ -20,8 +20,8 @@ services:
       AWS_BUCKET: $AWS_BUCKET
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
-  udagram-backend-feed:
-    image: duyhoang5891/udagram-backend-feed
+  udagram-api-feed:
+    image: duyhoang5891/udagram-api-feed
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
