--- a/udagram-deployment/env-configmap.yaml
+++ b/udagram-deployment/env-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: udagram-config-map
+  name: env-variable
 data:
   # property-like keys; each key maps to a simple value
   POSTGRES_DB: postgres
