--- a/udagram-deployment/env-configmap.yaml
+++ b/udagram-deployment/env-configmap.yaml
@@ -10,4 +10,4 @@ data:
   AWS_REGION: us-east-1
   AWS_PROFILE: default
   JWT_SECRET: testing
-  URL: http://localhost:8100
+  URL: a6d9868e98be042bea931c1d08f9b5eb-1793140708.us-east-1.elb.amazonaws.com
