--- a/udagram-deployment/env-secret.yaml
+++ b/udagram-deployment/env-secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: env-secret
 data:
-  POSTGRES_USERNAME: cG9zdGdyZXM=
-  POSTGRES_PASSWORD: cndFYjZ5MUVDWDU5ZlZGTEhua3Q=
+  POSTGRES_USERNAME: aG9hbmdwZDc=
+  POSTGRES_PASSWORD: ZHV5aG9hbmc1ODkx
