--- a/udagram-deployment/env-configmap.yaml
+++ b/udagram-deployment/env-configmap.yaml
@@ -5,9 +5,9 @@ metadata:
 data:
   # property-like keys; each key maps to a simple value
   POSTGRES_DB: postgres
-  POSTGRES_HOST: hoangpd7db.ct07kuwzblwb.us-east-1.rds.amazonaws.com
-  AWS_BUCKET: hoangpd7-user-uploaded
-  AWS_REGION: us-east-1
+  POSTGRES_HOST: postgres.c9vfxxrzekx4.us-west-2.rds.amazonaws.com
+  AWS_BUCKET: hoangpd7-992037258453-dev
+  AWS_REGION: us-west-2
   AWS_PROFILE: default
-  JWT_SECRET: testing
-  URL: a00a98e87a2bd499bb236c4cca06ab5f-705483287.us-east-1.elb.amazonaws.com
+  JWT_SECRET: mytoken
+  URL: http://localhost:8100
