--- a/udagram-deployment/udagram-api-feed-deployment.yaml
+++ b/udagram-deployment/udagram-api-feed-deployment.yaml
@@ -2,81 +2,40 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: udagram-api-feed
+    service: udagram-api-feed
   name: udagram-api-feed
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: udagram-api-feed
-  strategy: {}
+      service: udagram-api-feed
   template:
     metadata:
       labels:
-        app: udagram-api-feed
+        service: udagram-api-feed
     spec:
+      containers:
+        - image: duyhoang5891/udagram-api-feed
+          name: udagram-api-feed
+          imagePullPolicy: Always
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "2024Mi"
+              cpu: "500m"
+          envFrom:
+            - configMapRef:
+                name: env-config
+            - secretRef:
+                name: env-secret
+          volumeMounts:
+            - name: aws-secret
+              mountPath: "/root/.aws/"
+              readOnly: true
+      restartPolicy: Always
       volumes:
         - name: aws-secret
           secret:
             secretName: aws-secret
-      containers:
-      - image: duyhoang5891/udagram-api-feed
-        name: udagram-api-feed
-        resources:
-          requests:
-            memory: "64Mi"
-            cpu: "250m"
-          limits:
-            memory: "2042Mi"
-            cpu: "500m"
-        env:
-          - name: POSTGRES_HOST
-            valueFrom: 
-              configMapKeyRef:
-                name: env-variable
-                key: POSTGRES_HOST
-          - name: POSTGRES_DB
-            valueFrom: 
-              configMapKeyRef:
-                name: env-variable
-                key: POSTGRES_DB
-          - name: AWS_BUCKET
-            valueFrom: 
-              configMapKeyRef:
-                name: env-variable
-                key: AWS_BUCKET
-          - name: AWS_REGION
-            valueFrom: 
-              configMapKeyRef:
-                name: env-variable
-                key: AWS_REGION
-          - name: AWS_PROFILE
-            valueFrom: 
-              configMapKeyRef:
-                name: env-variable
-                key: AWS_PROFILE
-          - name: JWT_SECRET
-            valueFrom: 
-              configMapKeyRef:
-                name: env-variable
-                key: JWT_SECRET
-          - name: URL
-            valueFrom: 
-              configMapKeyRef:
-                name: env-variable
-                key: URL
-          - name: POSTGRES_USERNAME
-            valueFrom: 
-              secretKeyRef:
-                name: env-secret
-                key: POSTGRES_USERNAME
-          - name: POSTGRES_PASSWORD
-            valueFrom: 
-              secretKeyRef:
-                name: env-secret
-                key: POSTGRES_PASSWORD
-        volumeMounts:
-          - name: aws-secret
-            mountPath: "/root/.aws/"
-            readOnly: true
-        
