--- a/udagram-deployment/env-secret.yaml
+++ b/udagram-deployment/env-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: env-secret
+type: Opaque
 data:
   POSTGRES_USERNAME: aG9hbmdwZDc=
-  POSTGRES_PASSWORD: ZHV5aG9hbmc1ODkx
+  POSTGRES_PASSWORD: QW5oMDE4ODQ1ODU4NDk=
